--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,17 @@
-{"autoZoom":true,"autoRotate":true,"fullscreen":true,"imageBackground":"black","randomise":true,"recursive":true,"borderless":true,"hidePointer":true,"hideError":true,"delayInSecond":"7","bgColors":["Black","White","Blue"],"mediaSource":"usb","sources":["Usb","Local-Drive"],"usbLocation":"/media/","localLocation":"/Pictures/Slides/"}
+{
+  "autoZoom": true,
+  "autoRotate": true,
+  "fullscreen": true,
+  "imageBackground": "black",
+  "randomise": true,
+  "recursive": true,
+  "borderless": true,
+  "hidePointer": true,
+  "hideError": true,
+  "delayInSecond": "7",
+  "bgColors": ["Black", "White", "Blue"],
+  "mediaSource": "usb",
+  "sources": ["Usb", "Local-Drive"],
+  "usbLocation": "/media/",
+  "localLocation": "/home/pi/Pictures"
+}
