--- a/settings.json
+++ b/settings.json
@@ -1,17 +1,1 @@
-{
-  "autoZoom": true,
-  "autoRotate": true,
-  "fullscreen": true,
-  "imageBackground": "black",
-  "randomise": true,
-  "recursive": true,
-  "borderless": true,
-  "hidePointer": true,
-  "hideError": true,
-  "delayInSecond": "7",
-  "bgColors": ["Black", "White", "Blue"],
-  "mediaSource": "usb",
-  "sources": ["Usb", "Local-Drive"],
-  "usbLocation": "/media/",
-  "localLocation": "/home/pi/Pictures"
-}
+{"autoZoom":true,"autoRotate":true,"fullscreen":true,"imageBackground":"black","randomise":true,"recursive":true,"borderless":true,"hidePointer":true,"hideError":true,"delayInSecond":"7","bgColors":["Black","White","Blue"],"mediaSource":"local-drive","sources":["Usb","Local-Drive"],"usbLocation":"E:/media","localLocation":"C:/home/pi/Pictures","usbSubdirs":[{"id":1,"name":"Collections","show":true},{"id":2,"name":"Europe","show":true},{"id":3,"name":"Leo BirthDay","show":true}],"localSubdirs":[{"id":1,"name":"2022 Tet","show":true},{"id":2,"name":"2023 Europe","show":true},{"id":3,"name":"Selections","show":true}]}
