--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,23 @@
-{"autoZoom":true,"autoRotate":true,"fullscreen":true,"imageBackground":"black","randomise":true,"recursive":true,"borderless":true,"hidePointer":true,"hideError":true,"delayInSecond":"7","bgColors":["Black","White","Blue"],"mediaSource":"local-drive","sources":["Usb","Local-Drive"],"usbLocation":"E:/media","localLocation":"C:/home/pi/Pictures","usbSubdirs":[{"id":1,"name":"Europe","show":true},{"id":2,"name":"Leo BirthDay","show":true},{"id":3,"name":"Collections","show":true}],"localSubdirs":[{"id":1,"name":"2022 Tet","show":true},{"id":2,"name":"2023 Europe","show":true},{"id":3,"name":"Selections","show":true}]}
+{
+  "autoZoom": true,
+  "autoRotate": true,
+  "fullscreen": true,
+  "imageBackground": "black",
+  "randomise": true,
+  "recursive": true,
+  "borderless": true,
+  "hidePointer": true,
+  "hideError": true,
+  "delayInSecond": "7",
+  "bgColors": ["Black", "White", "Blue"],
+  "mediaSource": "usb",
+  "sources": ["Usb", "Local-Drive"],
+  "usbLocation": "/media",
+  "localLocation": "/home/pi/Pictures",
+  "usbSubdirs": [],
+  "localSubdirs": [
+    { "id": 1, "name": "2022 Tet", "show": false },
+    { "id": 2, "name": "2023 Europe", "show": true },
+    { "id": 3, "name": "Selections", "show": true }
+  ]
+}
