--- a/settings.json
+++ b/settings.json
@@ -9,15 +9,34 @@
   "hidePointer": true,
   "hideError": true,
   "delayInSecond": "7",
-  "bgColors": ["Black", "White", "Blue"],
-  "mediaSource": "usb",
-  "sources": ["Usb", "Local-Drive"],
+  "bgColors": [
+    "Black",
+    "White",
+    "Blue"
+  ],
+  "mediaSource": "local-drive",
+  "sources": [
+    "Usb",
+    "Local-Drive"
+  ],
   "usbLocation": "/media",
   "localLocation": "/home/pi/Pictures",
   "usbSubdirs": [],
   "localSubdirs": [
-    { "id": 1, "name": "2022 Tet", "show": false },
-    { "id": 2, "name": "2023 Europe", "show": true },
-    { "id": 3, "name": "Selections", "show": true }
+    {
+      "id": 1,
+      "name": "2022 Tet",
+      "show": true
+    },
+    {
+      "id": 2,
+      "name": "2023 Europe",
+      "show": true
+    },
+    {
+      "id": 3,
+      "name": "Selections",
+      "show": true
+    }
   ]
 }
