--- a/settings.json
+++ b/settings.json
@@ -1,23 +1,1 @@
-{
-  "autoZoom": true,
-  "autoRotate": false,
-  "fullscreen": true,
-  "imageBackground": "black",
-  "randomise": true,
-  "recursive": true,
-  "borderless": true,
-  "hidePointer": true,
-  "hideError": true,
-  "delayInSecond": "7",
-  "bgColors": ["Black", "White", "Blue"],
-  "mediaSource": "local-drive",
-  "sources": ["Usb", "Local-Drive"],
-  "usbLocation": "/media",
-  "localLocation": "/home/pi/Pictures",
-  "usbSubdirs": [],
-  "localSubdirs": [
-    { "id": 1, "name": "2022 Tet", "show": true },
-    { "id": 2, "name": "2023 Europe", "show": true },
-    { "id": 3, "name": "Selections", "show": true }
-  ]
-}
+{"autoZoom":true,"autoRotate":false,"fullscreen":true,"imageBackground":"black","randomise":true,"recursive":true,"borderless":true,"hidePointer":true,"hideError":true,"delayInSecond":"7","bgColors":["Black","White","Blue"],"mediaSource":"local-drive","sources":["Usb","Local-Drive"],"usbLocation":"/media","localLocation":"/home/pi/Pictures","usbSubdirs":[],"localSubdirs":[{"id":1,"name":"2022 Tet","show":true},{"id":2,"name":"2023 Europe","show":true},{"id":3,"name":"Selections","show":true}]}
