--- a/settings.json
+++ b/settings.json
@@ -9,17 +9,10 @@
   "hidePointer": true,
   "hideError": true,
   "delayInSecond": "7",
-  "bgColors": [
-    "Black",
-    "White",
-    "Blue"
-  ],
+  "bgColors": ["Black", "White", "Blue"],
   "mediaSource": "local-drive",
-  "sources": [
-    "Usb",
-    "Local-Drive"
-  ],
-  "usbLocation": "E:/media",
+  "sources": ["Usb", "Local-Drive"],
+  "usbLocation": "/media",
   "localLocation": "/home/pi/Pictures",
   "usbSubdirs": [
     {
